force-app/main/default/objects/PAY_Staging_Customer_to_Account__e/PAY_Staging_Customer_to_Account__e.object-meta.xml
<CustomObject>
    <description>This platform event is for moving Paymets Line of Business Staging Customer record to Account.</description>
    <label>PAY Staging Customer to Account</label>
    <pluralLabel>PAY Stagin Customer to Acount</pluralLabel>
</CustomObject>