force-app/main/default/objects/PAY_Staging_Customer_to_Account__e/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>