force-app/main/default/objects/PAY_Staging_Customer_to_Account__e/fields/Customer_Since__c.field-meta.xml
<CustomField>
    <fullName>Customer_Since__c</fullName>
    <label>Customer Since</label>
    <type>Date</type>
</CustomField>