force-app/main/default/objects/PAY_Staging_Customer_to_Account__e/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <description>Will be mapped to Accounts record type</description>
    <label>Customer Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>