force-app/main/default/objects/PAY_Staging_Customer_to_Account__e/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <label>Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>