force-app/main/default/objects/PAY_Staging_Customer_to_Account__e/fields/HNI__c.field-meta.xml
<CustomField>
    <fullName>HNI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used in ABCD Customer Creation.</description>
    <label>HNI</label>
    <type>Checkbox</type>
</CustomField>