force-app/main/default/objects/PAY_Staging_Customer_to_Account__e/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <description>To be mapped with Line of Business on Account</description>
    <label>Line of Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>