force-app/main/default/objects/PAY_Staging_Customer_to_Account__e/fields/Merchant_Contact_Payload__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Contact_Payload__c</fullName>
    <label>Merchant Contact Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>