force-app/main/default/objects/PAY_Staging_Customer_to_Account__e/fields/Merchant_Id__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Id__c</fullName>
    <label>Merchant Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>