force-app/main/default/objects/PAY_Staging_Customer_to_Account__e/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <label>Mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>