force-app/main/default/objects/PAY_Staging_Customer_to_Account__e/fields/Pan_No__c.field-meta.xml
<CustomField>
    <fullName>Pan_No__c</fullName>
    <label>Pan No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>