force-app/main/default/objects/PAY_Staging_Customer_to_Account__e/fields/STG_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>STG_Customer_Id__c</fullName>
    <description>Unique Identified on Staging Record.</description>
    <label>STG Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>